--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@ planner:fast_downward
 
 [EXEC]
 marvin_exec:
-fast_downward_exec:
+fast_downward_exec:/mnt/c/sandbox/Fast-Downward/fast-downward.py
 
 [FILES]
 input_path:edmm/running_example_short.yml
