--- a/config.ini
+++ b/config.ini
@@ -10,12 +10,14 @@ planner:fast_downward
 [EXEC]
 marvin_exec:
 fast_downward_exec:/mnt/c/sandbox/Fast-Downward/fast-downward.py
+# possible options: blind, iPDB, landmark-cut, fFyY, fF, yY. DEFAULT is blind.
+fast_downward_options:
 
 [FILES]
-input_path:edmm/running_example_short.yml
+input_path:edmm/running_example.yml
 output_path:output.yml
 output_pddl_path:current_output.pddl
-goal_state:goal_state_short
+goal_state:goal_state
 
 [PDDL]
 domain_path:pddl/domain.pddl
