--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,8 @@ dmypy.json
 
 # End of https://www.gitignore.io/api/python
 
+# PyCharm
+/.idea
 
 # Custom
 sas_plan
@@ -117,3 +119,4 @@ sas_plan.*
 output.yml
 current_output.pddl
 ba_env/
+/execution_logs
