add LAMA 2011 option

--- a/config.ini
+++ b/config.ini
@@ -10,8 +10,8 @@ planner:fast_downward
 [EXEC]
 marvin_exec:
 fast_downward_exec:/mnt/c/sandbox/Fast-Downward/fast-downward.py
-# possible options: blind, iPDB, landmark-cut, fFyY, fF, yY. DEFAULT is blind.
-fast_downward_options:
+# possible options: blind, iPDB, landmark-cut, fFyY, fF, yY, lama-2011. DEFAULT is blind.
+fast_downward_options:lama-2011
 
 [FILES]
 input_path:edmm/running_example.yml
